--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="https://scontent.fmnl6-2.fna.fbcdn.net/v/t1.15752-9/71724491_2610373405689301_7307592562984878080_n.png?_nc_cat=106&_nc_eui2=AeFOTI08SVIB_7MSoPJVMAxlOgS5QcZPXZL-HiBRqXcc3MRJzzoF53tdvYWQe82FjZ2RhaAaL507CLACvyd0745uzyqBtosDjMuAzFlLO0PTcw&_nc_oc=AQk4D6LfBpYpMJhX9PmoCsXsQGz7KaLQzsqy-YtSJKaXsT6G3HWfc3DM--SylnaLs8Y&_nc_ht=scontent.fmnl6-2.fna&oh=b049d2d1aa1663ace52cb9acf0e8365f&oe=5E2D252A" id="octocat" alt="octocat-gif" />
+<img src="https://imgur.com/54ERTtc" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Hello World! I’m Karlo Ballesta. This is my website!</p>
