--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="https://imgur.com/54ERTtc" id="octocat" alt="octocat-ballesta" />
+<img src="https://i.imgur.com/54ERTtc.png" id="octocat" alt="octocat-ballesta" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Hello World! I’m Karlo Ballesta. This is my website!</p>
