--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-
-<img src="https://i.imgur.com/54ERTtc.png" id="octocat" alt="octocat-ballesta" />
+<a href="https://imgur.com/54ERTtc"><img src="https://i.imgur.com/54ERTtc.png" title="source: imgur.com" /></a>
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Hello World! I’m Karlo Ballesta. This is my website!</p>
